--- a/assets/scss/_bootstrap.scss
+++ b/assets/scss/_bootstrap.scss
@@ -1173,7 +1173,7 @@ fieldset[disabled] .btn {
   cursor: not-allowed;
   pointer-events: none;
   opacity: 0.65;
-  filter: alpha(opacity=65);
+  filter: unquote("alpha(opacity=65)");
   -webkit-box-shadow: none;
   box-shadow: none;
 }
