Add a few more pages

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,10 +1,12 @@
 &copy; {{ site.time | date: "%Y" }} ChatSecure
         
 <nav>
+    <a href="/about">About</a> &middot;
     <a href="/blog">Blog</a> &middot;
     <a href="/faq">FAQ</a> &middot;
     <a href="/support">Support</a> &middot;
-    <a href="/privacy">Privacy</a>
+    <a href="/privacy">Privacy</a> &middot;
+    <a href="/contribute">Contribute</a>
 </nav>
 
 <nav class="social">
