--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -8,6 +8,7 @@
             <a href="/blog" class="home">Blog</a>
             <a href="/faq">FAQ</a>
             <a href="/support">Support</a>
+            <a href="/contribute">Contribute</a>
         </nav>
         <nav class="tagline">
             {% if site.inc.tagline %}<span>{{ site.inc.tagline }}</span>{% endif %}
