--- a/_includes/_cover.html
+++ b/_includes/_cover.html
@@ -1,8 +1,4 @@
----
-layout: base
----
 <div class="blog-cover" style="background-image:url(/images/{{ site.inc.cover_image }});">
-    
     <section>
         <div class="container">
             <h1>{{ site.inc.title }}</h1>
@@ -12,7 +8,7 @@ layout: base
             <a href="https://twitter.com/{{ site.inc.twitter }}" title="Follow on Twitter" target="_blank"><i class="icon icon-twitter"></i></a>
             {% endif %}
             {% if site.inc.facebook %}
-            <a href="http://facebook.com/{{ site.inc.facebook }}" title="Like on Facebook" target="_blank"><i class="icon icon-facebook"></i></a>
+            <a href="https://facebook.com/{{ site.inc.facebook }}" title="Like on Facebook" target="_blank"><i class="icon icon-facebook"></i></a>
             {% endif %}
             <a href="/feed.xml" title="RSS Feed">
                 <i class="icon icon-rss"></i>
@@ -20,12 +16,3 @@ layout: base
         </div>
     </section>
 </div>
-
-<article class="container">
-    <section class="index">
-        <div>
-            <h2 class="title">Hello there.</h2>
-        </div>
-        <hr>
-    </section>
-</article>
