--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -20,8 +20,11 @@
 {% endif %}
 <meta property="og:image" content="{{ site.url }}/images/{{ site.inc.logo }}"/>   
 {% endif %}
-{% if page.excerpt %}
-<meta property="og:description" content="{{ page.excerpt }}"/>
-<meta name="description" content="{{ page.excerpt }}"/>
+{% if page.description %}
+<meta property="og:description" content="{{ page.description }}"/>
+<meta name="description" content="{{ page.description }}"/>
+{% else %}
+<meta property="og:description" content="{{ site.description }}"/>
+<meta name="description" content="{{ site.description }}"/>
 {% endif %}
 <meta property="og:site_name" content="{{ site.inc.title }}"> 
