Added more information for developers

--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -9,6 +9,7 @@
             <a href="/faq">FAQ</a>
             <a href="/support">Support</a>
             <a href="/contribute">Contribute</a>
+            <a href="/developers">Developers</a>
         </nav>
         <nav class="tagline">
             {% if site.inc.tagline %}<span>{{ site.inc.tagline }}</span>{% endif %}
