--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -13,7 +13,7 @@
         </nav>
         <nav class="tagline">
             {% if site.inc.tagline %}<span>{{ site.inc.tagline }}</span>{% endif %}
-            <a href="/about" class="btn btn-outline">Learn More</a>
+            <a href="/blog" class="btn btn-outline">Blog</a>
         </nav>
     </header>
 </section>
