Add OMEMO info to main page

--- a/_includes/_bottom_frontpage.html
+++ b/_includes/_bottom_frontpage.html
@@ -30,6 +30,7 @@
                     <ul class="features-list">
                         <li>XMPP with <a href="https://en.wikipedia.org/wiki/Transport_Layer_Security#Certificate_pinning">TLS certificate pinning.</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/Off-the-Record_Messaging">OTR</a> for verifiable <a href="https://en.wikipedia.org/wiki/End-to-end_encryption">end-to-end encryption</a> and <a href="https://en.wikipedia.org/wiki/Forward_secrecy">forward secrecy</a>.</li>
+                        <li><a href="https://en.wikipedia.org/wiki/OMEMO">OMEMO</a> for a mobile-friendly alternative to OTR.</li>
                         <li><a href="https://en.wikipedia.org/wiki/Tor_(anonymity_network)">Tor</a> to help bypass restrictive firewalls.</li>
                         <li><a href="https://www.zetetic.net/sqlcipher/design/">SQLCipher</a> to locally encrypt conversation logs.</li>
                     <ul>
